tests/ui/repr/repr-repeated-attrs.stderr
error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-repeated-attrs.rs:3:8
   |
LL | #[repr(transparent, transparent)]
   |        ^^^^^^^^^^^  ^^^^^^^^^^^
LL |
LL | #[repr(transparent)]
   |        ^^^^^^^^^^^

error[E0692]: transparent struct cannot have other repr hints
  --> $DIR/repr-repeated-attrs.rs:8:8
   |
LL | #[repr(transparent)]
   |        ^^^^^^^^^^^
LL |
LL | #[repr(transparent)]
   |        ^^^^^^^^^^^

warning: representation attribute is specified more than once
  --> $DIR/repr-repeated-attrs.rs:13:8
   |
LL | #[repr(Rust, Rust)]
   |        ^^^^  ^^^^
   |
   = note: for consistency, only specify the representation once
   = note: `#[warn(repeated_reprs)]` on by default

warning: representation attribute is specified more than once
  --> $DIR/repr-repeated-attrs.rs:17:8
   |
LL | #[repr(C, C)]
   |        ^  ^
LL |
LL | #[repr(C, C, C)]
   |        ^  ^  ^
   |
   = note: for consistency, only specify the representation once

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:22:8
   |
LL | #[repr(u8, u8)]
   |        ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

warning: representation attribute is specified more than once
  --> $DIR/repr-repeated-attrs.rs:22:8
   |
LL | #[repr(u8, u8)]
   |        ^^  ^^
   |
   = note: for consistency, only specify the representation once

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:29:8
   |
LL | #[repr(C, C, u8)]
   |        ^  ^  ^^
...
LL | #[repr(C, u8, u8)]
   |        ^  ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

warning: representation attribute is specified more than once
  --> $DIR/repr-repeated-attrs.rs:29:8
   |
LL | #[repr(C, C, u8)]
   |        ^  ^  ^^
...
LL | #[repr(C, u8, u8)]
   |        ^  ^^  ^^
   |
   = note: for consistency, only specify the representation once

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:37:8
   |
LL | #[repr(Rust, u8, u8)]
   |        ^^^^  ^^  ^^

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:37:8
   |
LL | #[repr(Rust, u8, u8)]
   |        ^^^^  ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

warning: representation attribute is specified more than once
  --> $DIR/repr-repeated-attrs.rs:37:8
   |
LL | #[repr(Rust, u8, u8)]
   |        ^^^^  ^^  ^^
   |
   = note: for consistency, only specify the representation once

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:45:8
   |
LL | #[repr(u8, u8)]
   |        ^^  ^^
...
LL | #[repr(u16)]
   |        ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

warning: representation attribute is specified more than once
  --> $DIR/repr-repeated-attrs.rs:45:8
   |
LL | #[repr(u8, u8)]
   |        ^^  ^^
...
LL | #[repr(u16)]
   |        ^^^
   |
   = note: for consistency, only specify the representation once

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:53:8
   |
LL | #[repr(C, u8)]
   |        ^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:61:8
   |
LL | #[repr(C, C, u8, u8, u8)]
   |        ^  ^  ^^  ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>

warning: representation attribute is specified more than once
  --> $DIR/repr-repeated-attrs.rs:61:8
   |
LL | #[repr(C, C, u8, u8, u8)]
   |        ^  ^  ^^  ^^  ^^
   |
   = note: for consistency, only specify the representation once

error: aborting due to 9 previous errors; 7 warnings emitted

Some errors have detailed explanations: E0566, E0692.
For more information about an error, try `rustc --explain E0566`.
Future incompatibility report: Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:22:8
   |
LL | #[repr(u8, u8)]
   |        ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:29:8
   |
LL | #[repr(C, C, u8)]
   |        ^  ^  ^^
...
LL | #[repr(C, u8, u8)]
   |        ^  ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:37:8
   |
LL | #[repr(Rust, u8, u8)]
   |        ^^^^  ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:45:8
   |
LL | #[repr(u8, u8)]
   |        ^^  ^^
...
LL | #[repr(u16)]
   |        ^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:53:8
   |
LL | #[repr(C, u8)]
   |        ^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

Future breakage diagnostic:
error[E0566]: conflicting representation hints
  --> $DIR/repr-repeated-attrs.rs:61:8
   |
LL | #[repr(C, C, u8, u8, u8)]
   |        ^  ^  ^^  ^^  ^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #68585 <https://github.com/rust-lang/rust/issues/68585>
   = note: `#[deny(conflicting_repr_hints)]` (part of `#[deny(future_incompatible)]`) on by default

